--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>منصة توجيه الطلاب للبكالوريا - الجزائر</title>
+    <title>منصة التوجيه إلى شعب السنة ثانية ثانوي </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -88,10 +88,10 @@
             </div>
         </nav>
         
-        <!-- دليل الاستخدام للمعلمين -->
+        <!-- دليل الاستخدام للإدارة والمستشارين -->
         <div class="teacher-guide mb-8">
             <h3 class="text-xl font-bold text-blue-800 mb-3 flex items-center">
-                <i class="fas fa-chalkboard-teacher mr-2"></i> دليل استخدام المنصة للمعلمين
+                <i class="fas fa-chalkboard-teacher mr-2"></i> دليل استخدام المنصة للإدارة والمستشارين
             </h3>
             <ol class="list-decimal list-inside space-y-2 text-slate-700">
                 <li>أدخل اسم الطالب والشعبة الدراسية</li>
@@ -107,7 +107,7 @@
             <!-- لوحة المعلومات -->
             <div class="bg-white rounded-2xl shadow-lg p-6 w-full md:w-1/3">
                 <h2 class="text-xl font-bold text-blue-800 mb-4 flex items-center">
-                    <i class="fas fa-info-circle mr-2"></i> معلومات للمعلمين
+                    <i class="fas fa-info-circle mr-2"></i> معلومات مهمة 
                 </h2>
                 <ul class="space-y-3 text-slate-700">
                     <li class="flex items-start">
@@ -156,9 +156,9 @@
             <div class="w-full md:w-2/3">
                 <div class="bg-white rounded-2xl shadow-xl overflow-hidden">
                     <div class="bg-blue-800 text-white p-6">
-                        <h1 class="text-2xl sm:text-3xl font-bold text-center">منصة توجيه الطلاب للبكالوريا في الجزائر</h1>
+                        <h1 class="text-2xl sm:text-3xl font-bold text-center">منصة توجيه تلاميذ الأولى ثانوي إلى شعب السنة ثانية ثانوي</h1>
                         <p class="text-blue-100 text-center mt-2 max-w-2xl mx-auto">
-                            نظام توجيهي يساعد المعلمين على تحديد المسار الأكاديمي الأمثل للطلاب بناءً على درجاتهم ومهاراتهم
+                           نظام توجيهي يساعد الإدارة والمستشارين  على تحديد المسار الأكاديمي الأمثل للطلاب بناءً على درجاتهم ومهاراتهم
                         </p>
                     </div>
                     
