--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
                 <a href="#" class="hover:text-blue-800"><i class="fab fa-linkedin"></i></a>
                 <a href="#" class="hover:text-blue-800"><i class="fas fa-envelope"></i></a>
             </div>
-            <p>© 2023 نظام توجيه الطلاب للبكالوريا - وزارة التربية الوطنية الجزائرية</p>
-            <p class="mt-2">تم تطويره لمساعدة المعلمين في عملية توجيه الطلاب نحو المسارات الأكاديمية المناسبة</p>
-            <p class="mt-4 text-xs text-slate-500">الإصدار 1.0.0 - تم التحديث في 26 يوليو 2023</p>
+            <p>© 2025 نظام توجيه وحساب معدل القبول في شعب السنة ثانية ثانوي  - وزارة التربية الوطنية الجزائرية</p>
+            <p class="mt-2">تم تطويره لمساعدة الإدارة والمستشارين في عملية التوجيه والقبول لتلاميذ السنة اولى ثانوي </p>
+            <p class="mt-4 text-xs text-slate-500">الإصدار 1.0.0 - تم التحديث في 26 يوليو 2025</p>
         </footer>
     </div>
 
